tag: 0.2.0. Removed old files. Added 1 files.

--- a/434-h/434-h.htm
+++ b/434-h/434-h.htm
@@ -4883,7 +4883,7 @@ the midst of luxury?
 money that no one would take you to task about?  My mother and I have
 been surrounded for years with every indulgence everything that would
 make a display.  But we have never had any money, Miss Innes; that must
-have been why mother rented this house.  My stepfather pays out bills.
+have been why mother rented this house.  My stepfather pays our bills.
 It's the most maddening, humiliating existence in the world.  I would
 love honest poverty better."
 </P>
@@ -6922,7 +6922,7 @@ found.  What do you think frightened him, Mr. Jamieson?"
 "It is hard to say," he replied slowly, "but I think we may be certain
 it was fright, and that he was hiding from something.  I am sorry in
 more than one way:  I have always believed that Thomas knew something,
-or suspected something, that he would not tell.  Do you know hour much
+or suspected something, that he would not tell.  Do you know how much
 money there was in that worn-out wallet of his?  Nearly a hundred
 dollars!  Almost two months' wages&mdash;and yet those darkies seldom have a
 penny.  Well&mdash;what Thomas knew will be buried with him."
@@ -9539,7 +9539,7 @@ and there was no mask of cordiality in his manner.
 
 <P>
 "I shall stay here, I think, doctor."  I did not like his face or his
-manner; there was a subtle change in both.  He had thrown of the air of
+manner; there was a subtle change in both.  He had thrown off the air of
 friendliness, and I thought, too, that he looked anxious and haggard.
 </P>
 
